--- a/sp5-chap08/pom.xml
+++ b/sp5-chap08/pom.xml
@@ -24,14 +24,27 @@
       		<artifactId>tomcat-jdbc</artifactId>
       		<version>8.5.27</version>
       </dependency>
+    
       <dependency>
-      		<groupId>mysql</groupId>
-      		<artifactId>mysql-connector-java</artifactId>
-      		<version>5.1.45</version>
+      	<groupId>mysql</groupId>
+      	<artifactId>mysql-connector-java</artifactId>
+      	<version>5.1.45</version>
       </dependency>
 
+	  <dependency>
+		<groupId>org.slf4j</groupId>  
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.25</version>
+	  </dependency>
+	
+	  <dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.2.3</version>
+	  </dependency>
       
     </dependencies>
+    
     <!-- 여기까지  -->
     <build>
         <plugins>
